--- a/frontend/ListaDeTarefas/src/assets/main.css
+++ b/frontend/ListaDeTarefas/src/assets/main.css
@@ -1,7 +1,2 @@
-* {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    background: black;
-    color: white;
-}
+@import "tailwindcss";
+
